Fix for jobs.ch s pretty stretchy iframe

--- a/components/02-molecules/header/landing-page-header/_landing-page-header.scss
+++ b/components/02-molecules/header/landing-page-header/_landing-page-header.scss
@@ -90,6 +90,12 @@ $landing-page-header-bottom-margin: $spacer-xxl;
   }
 }
 
+@media screen and (max-width: $grid-breakpoint-md-lg) and (min-height: $grid-breakpoint-md-lg) {
+  .landing-page-header {
+    min-height: 20rem;
+  }
+}
+
 // excluded for now
 
 // @import './landing-page-header--red';
